[project]
name = "launchtui"
version = "0.1.0"
description = "GUI tool for managing macOS launch daemons"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual>=0.44.0"]

[project.scripts]
launchtui = "launchtui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
